fix: 修复iFlow GLM流式响应解析问题

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,7 +24,7 @@ services:
       - DATABASE_PATH=data/channels.db
       # AI 服务配置（建议配置）
       - ANTHROPIC_MAX_TOKENS=32000 # Claude 模型最大 token 数限制
-      # - OPENAI_REASONING_MAX_TOKENS=32000 # OpenAI 思考模型 max_completion_tokens 默认值
+      - OPENAI_REASONING_MAX_TOKENS=32000 # OpenAI 思考模型 max_completion_tokens 默认值
 
       # ============================================
       # 数据库配置 - MySQL（可选，取消注释并注释掉上面的 SQLite）
@@ -42,17 +42,17 @@ services:
       # - ENCRYPTION_KEY=
       # - SESSION_SECRET_KEY=
       # - WEB_PORT=3000
-      # - OPENAI_LOW_TO_ANTHROPIC_TOKENS=2048
-      # - OPENAI_MEDIUM_TO_ANTHROPIC_TOKENS=8192
-      # - OPENAI_HIGH_TO_ANTHROPIC_TOKENS=16384
-      # - OPENAI_LOW_TO_GEMINI_TOKENS=2048
-      # - OPENAI_MEDIUM_TO_GEMINI_TOKENS=8192
-      # - OPENAI_HIGH_TO_GEMINI_TOKENS=16384
-      # - ANTHROPIC_TO_OPENAI_LOW_REASONING_THRESHOLD=2048
-      # - ANTHROPIC_TO_OPENAI_HIGH_REASONING_THRESHOLD=16384
-      # - GEMINI_TO_OPENAI_LOW_REASONING_THRESHOLD=2048
-      # - GEMINI_TO_OPENAI_HIGH_REASONING_THRESHOLD=16384
-      # - LOG_LEVEL=WARNING
+      - OPENAI_LOW_TO_ANTHROPIC_TOKENS=2048
+      - OPENAI_MEDIUM_TO_ANTHROPIC_TOKENS=8192
+      - OPENAI_HIGH_TO_ANTHROPIC_TOKENS=16384
+      - OPENAI_LOW_TO_GEMINI_TOKENS=2048
+      - OPENAI_MEDIUM_TO_GEMINI_TOKENS=8192
+      - OPENAI_HIGH_TO_GEMINI_TOKENS=16384
+      - ANTHROPIC_TO_OPENAI_LOW_REASONING_THRESHOLD=2048
+      - ANTHROPIC_TO_OPENAI_HIGH_REASONING_THRESHOLD=16384
+      - GEMINI_TO_OPENAI_LOW_REASONING_THRESHOLD=2048
+      - GEMINI_TO_OPENAI_HIGH_REASONING_THRESHOLD=16384
+      # - LOG_LEVEL=DEBUG
       # - LOG_FILE=logs/app.log
       # - LOG_MAX_DAYS=1
 
