feat: 实现智能重试机制和渠道切换功能

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -52,7 +52,7 @@ services:
       - ANTHROPIC_TO_OPENAI_HIGH_REASONING_THRESHOLD=16384
       - GEMINI_TO_OPENAI_LOW_REASONING_THRESHOLD=2048
       - GEMINI_TO_OPENAI_HIGH_REASONING_THRESHOLD=16384
-      # - LOG_LEVEL=DEBUG
+      - LOG_LEVEL=INFO # 设置为INFO以显示详细的请求/响应日志
       # - LOG_FILE=logs/app.log
       # - LOG_MAX_DAYS=1
 
